--- a/src/design/templates/campaign-admin/campaign-admin.component.html
+++ b/src/design/templates/campaign-admin/campaign-admin.component.html
@@ -32,10 +32,10 @@
         <div class="settings__image-container">
           <h3 class="text-center">Icon</h3>
           <img
-            class="settings__image"
+            class="settings__icon"
             title="Campaign Icon"
             alt="Icon of this campaign"
-            [src]="campaign.icon"
+            [src]="serverUrl + '/' + campaign.icon"
           />
         </div>
       </div>
