--- a/src/design/organisms/sidebar/sidebar.component.html
+++ b/src/design/organisms/sidebar/sidebar.component.html
@@ -64,7 +64,10 @@
       </li>
       <li class="sidebar__entry entry">
         <a class="entry__link" (click)="this.logout.emit()">
-          <app-icon class="entry__icon" [icon]="'sign-out'"></app-icon>
+          <app-icon
+            class="entry__icon"
+            [icon]="'right-from-bracket'"
+          ></app-icon>
           <span class="entry__text">Logout</span>
         </a>
       </li>
