--- a/src/design/organisms/editable-text/editable-text.component.html
+++ b/src/design/organisms/editable-text/editable-text.component.html
@@ -8,7 +8,7 @@
         <h6 class="heading__edit-text">
           (
           {{ editButtonText() }}
-          <app-icon [icon]="'edit'"></app-icon>
+          <app-icon [icon]="'pen'"></app-icon>
           )
         </h6>
       </button>
