--- a/src/design/templates/campaign-admin/campaign-admin.component.html
+++ b/src/design/templates/campaign-admin/campaign-admin.component.html
@@ -56,7 +56,7 @@
 
     <!-- Members & Admins-->
     <h3>
-      <app-icon [icon]="'users-cog'"></app-icon>
+      <app-icon [icon]="'users-gear'"></app-icon>
       Campaign Members
     </h3>
 
