--- a/src/design/organisms/toast-overlay/toast-overlay.component.scss
+++ b/src/design/organisms/toast-overlay/toast-overlay.component.scss
@@ -1,27 +1,53 @@
+.button-container {
+  &:focus,
+  &:focus-within,
+  &:hover,
+  &:focus-visible {
+    .toast {
+      outline: var(--focus-outline);
+    }
+  }
+}
+
 .toast {
   position: fixed;
   bottom: 10%;
   right: 10%;
 
+  --negated-toast-padding: calc(var(--bs-toast-padding-x) * -1);
+  --toast-padding-x: var(--bs-toast-padding-x);
+  --toast-padding-y: calc(var(--bs-toast-padding-y) / 2);
+
+  &:focus,
+  &:focus-within,
+  &:hover,
+  &:focus-visible {
+    outline: var(--focus-outline);
+  }
+
   &__heading {
-    flex: 1;
+    border-radius: var(--bs-toast-border-radius) var(--bs-toast-border-radius) 0
+      0;
+    margin: var(--negated-toast-padding);
+    margin-bottom: unset;
+    padding: var(--toast-padding-y) var(--toast-padding-x) 0
+      var(--toast-padding-x);
+    border-bottom: 2px solid var(--bs-toast-border-color);
   }
 
   &__body {
+    border-radius: 0 0 var(--bs-toast-border-radius)
+      var(--bs-toast-border-radius);
+    margin: var(--negated-toast-padding);
+    margin-top: unset;
+    padding: 0 var(--toast-padding-x) var(--toast-padding-y)
+      var(--toast-padding-x);
+
+    &--no-header {
+      margin-top: var(--negated-toast-padding);
+      padding-top: var(--toast-padding-y);
+    }
   }
-}
-
-.heading {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  gap: var(--spacer-1);
-  font-weight: bold;
-}
-
-.body {
-  display: flex;
-  flex-direction: column;
 
   &--warning,
   &--success,
@@ -34,7 +60,70 @@
   &--dark {
     color: var(--bs-white);
   }
+}
+
+.heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: var(--spacer-1);
+  font-weight: bold;
+
+  &--warning,
+  &--success,
+  &--info,
+  &--light {
+    filter: brightness(120%);
+    color: var(--bs-black);
+  }
+
+  &--secondary,
+  &--dark {
+    filter: brightness(80%);
+    color: var(--bs-white);
+  }
+
+  &__icon {
+  }
 
   &__text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--spacer-2);
+  }
+
+  &__close-button {
+    font-size: 20px;
+    padding-left: var(--spacer-1);
+    padding-right: var(--spacer-1);
+    &:focus,
+    &:focus-within,
+    &:hover,
+    &:focus-visible {
+      outline: var(--focus-outline);
+    }
+  }
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+
+  &__text {
+  }
+
+  &__button {
+    width: fit-content;
+  }
+
+  &__icon {
+    margin-left: var(--spacer-2);
+  }
+
+  &__button-container {
+    display: flex;
+    flex-direction: row;
+    gap: var(--spacer-3);
   }
 }
